--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -4,6 +4,13 @@
       <div class="main-menu-item">
         Магазины:
       </div>
+      <div class="main-menu-item" *ngFor="let shop of shops">
+        <a [routerLink]="['/shop', shop.id]">
+          <div class="flex-link">
+            <span>{{shop.name}}</span>
+          </div>
+        </a>
+      </div>
 
       <div class="main-menu-item">
         <div class="flex-link" (click)="showAddShopModal()">
